AppInmobiliaria/force-app/main/default/objects/Property_Request__c/Property_Request__c.object-meta.xml
<CustomObject>
    <label>Property Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>