AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Desired_City__c.field-meta.xml
<CustomField>
    <fullName>Desired_City__c</fullName>
    <label>Desired City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>