AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Desired_Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Desired_Neighborhood__c</fullName>
    <label>Desired Neighborhood</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>