AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Desired_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Desired_Operation_Type__c</fullName>
    <label>Desired Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compra</fullName>
                <default>true</default>
                <label>Compra</label>
            </value>
            <value>
                <fullName>Alquiler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>