AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Desired_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Desired_State_Province__c</fullName>
    <label>Desired State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provincias_Espana</valueSetName>
    </valueSet>
</CustomField>