AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Desired_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Desired_Zip_Code__c</fullName>
    <label>Desired Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>