AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Elevator_Required__c.field-meta.xml
<CustomField>
    <fullName>Elevator_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must Have Elevator</label>
    <type>Checkbox</type>
</CustomField>