AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Max_Budget__c.field-meta.xml
<CustomField>
    <fullName>Max_Budget__c</fullName>
    <label>Max Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>