AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Min_Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Min_Bathrooms__c</fullName>
    <label>Min Bathrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>