AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Min_Budget__c.field-meta.xml
<CustomField>
    <fullName>Min_Budget__c</fullName>
    <label>Min Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>