AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Min_Square_Meters__c.field-meta.xml
<CustomField>
    <fullName>Min_Square_Meters__c</fullName>
    <label>Min Square Meters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>