AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Needs_Financing__c.field-meta.xml
<CustomField>
    <fullName>Needs_Financing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Financing</label>
    <type>Checkbox</type>
</CustomField>