AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <label>Request Number</label>
    <type>AutoNumber</type>
    <displayFormat>REQ-{00000}</displayFormat>
    <startingNumber>1</startingNumber>
</CustomField>