AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Request_Reference__c.field-meta.xml
<CustomField>
    <fullName>Request_Reference__c</fullName>
    <displayFormat>REQ-{00000}</displayFormat>
    <label>Request Reference</label>
    <type>AutoNumber</type>
</CustomField>