AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Requested_Financing_Percent__c.field-meta.xml
<CustomField>
    <fullName>Requested_Financing_Percent__c</fullName>
    <label>Requested Financing %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>