AppInmobiliaria/force-app/main/default/objects/Property_Request__c/fields/Total_Matches__c.field-meta.xml
<CustomField>
    <fullName>Total_Matches__c</fullName>
    <label>Total Matches</label>
    <summaryForeignKey>Property_Match__c.Property_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>