AppInmobiliaria/force-app/main/default/objects/Property_Request__c/validationRules/Banos_Minimos_Enteros.validationRule-meta.xml
<ValidationRule>
    <fullName>Banos_Minimos_Enteros</fullName>
    <active>true</active>
    <errorConditionFormula>FLOOR(Min_Bathrooms__c) &lt;&gt; Min_Bathrooms__c</errorConditionFormula>
    <errorDisplayField>Min_Bathrooms__c</errorDisplayField>
    <errorMessage>El número de baños debe ser un valor exacto entero (sin decimales).</errorMessage>
</ValidationRule>