AppInmobiliaria/force-app/main/default/objects/Property_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Pending_Matches__c</columns>
    <columns>Desired_Operation_Type__c</columns>
    <columns>Max_Budget__c</columns>
    <columns>Desired_State_Province__c</columns>
    <columns>Desired_City__c</columns>
    <columns>Min_Bedrooms__c</columns>
    <columns>Min_Bathrooms__c</columns>
    <columns>Elevator_Required__c</columns>
    <columns>Desired_Neighborhood__c</columns>
    <columns>Desired_Zip_Code__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>